This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

02-Jan-2009 Ron Severdia
# Fixed bug in CSS for ACL, general CSS cleanup & reformat

01-Jan-2009 Mark Dexter
# Fix bug where article global parameters were not showing 

29-Dec-2009 Mark Dexter
# Add correct initial Article parameters in joomla.sql
+ Partial implementation of Category List Layout
^ Standarize CSS class names in com_content - thanks Andrea Tarr
# Fixes in user modules - thanks Elin Waring
^ Improvements to Contact layout - thanks Elin Waring
# Fix but in mod_menu when there is no Itemid. Use default if no active.
# Fix PHP warning messages in New User Groups and new Access Levels.

29-Dec-2009 Hannes Papenberg
 # Fixed reference bug in JCategories
 # Fixed UTF-8 bug in dropdown selects
 # Fixed cosmetic bug in includes/router.php
 # refactored TinyMCE - thanks Jean-Marie
 # fixed SimplePie library - thanks Jean-Marie
 # improved frontend article editing - thanks Jean-Marie
 # fixed reference bug and spelling mistake in com_plugins

29-Dec-2009 Sam Moffatt
 + Added semicolon after access in configuration.php-dist

27-Dec-2009 Sam Moffatt
 # Removed the default for the #__extensions manifest_cache field

24-Dec-2009 Andrew Eddie
 ^ Moved modal user field from com_users to jform library; fixed occurances in com_contacts.
 # Fixed bug in modal users list.
 ^ Complete MVC refactor of com_messages.
 ^ Applied patch [#19046] JDatabase::$_connection inaccessible, proposing a getConnection() method as the solution
 # Fixed [#18641] JForm Field elements do not include correct jimport commands

23-Dec-2009 Ian MacLennan
 ^ Moved JUtility::sendMail and sendAdminMail to JMail and added appropriate proxy methods (thanks Arlen Walker)

23-Dec-2009 Andrew Eddie