@@ -13,7 +13,7 @@ div#toolbar-box {
 
 div#element-box {
   /*background: #f8f8f8;*/
-  background: #fff;
+  background-color: #f4f4f4; 
 }
 
 div#element-box div.section-box div.m {
@@ -26,7 +26,7 @@ div.t, div.b {
 	padding: 0;
 	margin: 0;
 	overflow: hidden;
-	background-color: #f8f8f8;
+	background-color: #f8f8f8; 
 }
 
 div.m {
@@ -74,7 +74,7 @@ div#submenu-box div.b div.b div.b {
 
 div#toolbar-box,
 div#element-box div.section-box {
-  background: #fbfbfb;
+  background: #f4f4f4;
 }
 
 div#toolbar-box div.t,
